syntax = "proto3";

package auth;

// The AuthService definition.
service AuthService {
  // Sends a sign up request
  rpc SignUp (SignUpRequest) returns (SignUpResponse);
  // Sends a sign in request
  rpc SignIn (SignInRequest) returns (SignInResponse);
}

// The request message containing the user's details for sign up.
message SignUpRequest {
  string email = 1;
  string password = 2;
}

// The response message containing the result of the sign up process.
message SignUpResponse {
  string message = 1;
  bool success = 2;
}

// The request message containing the user's details for sign in.
message SignInRequest {
  string email = 1;
  string password = 2;
}

// The response message containing the result of the sign in process.
message SignInResponse {
  string userId = 1;
  string role = 2;
}
